# Protocol-Analyzer

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  build_travis.sh  clang_scan.sh  coverity_scan.sh  cppcheck_scan.sh  infer_scan.sh  oclint_scan.sh  pvs_scan.sh  run.sh  scan.sh  sonar_scan.sh  tidy_scan.sh
config/: ProtocolDefinition.json  ScannerSettings.json
include/: Api.hpp  Http.hpp  Log.hpp  Socket.hpp  SocketManager.hpp
include/analyzer/: AnalyzerApi.hpp  Api.hpp  BinaryDataEngine.hpp  BinaryDataEngineIterator.hpp  BinaryStructuredDataEngine.hpp  Common.hpp  Http.hpp  LockedDeque.hpp  Log.hpp  Mutex.hpp  Notification.hpp  Parser.hpp  Protocol.hpp  ProtocolLayer.hpp  RawDataBuffer.hpp  Socket.hpp  SocketManager.hpp  System.hpp  Task.hpp  Timer.hpp  Utilities.hpp
include/framework/: AnalyzerApi.hpp  BinaryDataEngine.hpp  BinaryDataEngineIterator.hpp  BinaryStructuredDataEngine.hpp  Common.hpp  FrameworkApi.hpp  FrameworkCallbackFunctors.hpp  FrameworkModuleTypes.hpp  GlobalInfo.hpp  Http.hpp  IntegerValue.hpp  LockedDeque.hpp  Log.hpp  Mutex.hpp  NetlinkInterface.hpp  NetworkAddresses.hpp  NetworkTypes.hpp  Notification.hpp  Parser.hpp  Protocol.hpp  Socket.hpp  System.hpp  SystemNetworkConfiguration.hpp  Task.hpp  Timer.hpp  Utilities.hpp
include/framework/common/: Clock.hpp
include/scanner/: ArgumentsHandlers.hpp  ArgumentsParser.hpp  ScannerApi.hpp
src/: BinaryDataEngine.cpp  BinaryDataEngineIterator.cpp  BinaryStructuredDataEngine.cpp  BitStreamEngine.cpp  ByteStreamEngine.cpp  Common.cpp  Http.cpp  Log.cpp  Mutex.cpp  Parser.cpp  Protocol.cpp  RawDataBuffer.cpp  Socket.cpp  SocketManager.cpp  SocketSSL.cpp  System.cpp  Task.cpp  TaskManager.cpp  Timer.cpp  Utilities.cpp  main.cpp
src/framework/: BinaryDataEngine.cpp  BinaryDataEngineIterator.cpp  BinaryStructuredDataEngine.cpp  BitStreamEngine.cpp  ByteStreamEngine.cpp  Common.cpp  FrameworkCallbackFunctors.cpp  GlobalInfo.cpp  Http.cpp  IntegerValue.cpp  Log.cpp  Mutex.cpp  NetlinkInterface.cpp  NetworkTypes.cpp  Parser.cpp  Protocol.cpp  Socket.cpp  SocketSSL.cpp  System.cpp  SystemNetworkConfiguration.cpp  Task.cpp  TaskManager.cpp  Timer.cpp  Utilities.cpp
src/framework/common/: Clock.cpp
src/scanner/: ArgumentsParser.cpp  ScannerEntryPoint.cpp
test/: test_anything.cpp  test_binary_data_engine.cpp  test_binary_structured_data_engine.cpp  test_callbacks.cpp  test_common.cpp  test_http2_negotiation.cpp  test_integer_value.cpp  test_logging.cpp  test_manager.cpp  test_netlink.cpp  test_notification.cpp  test_raw_data_buffer.cpp  test_socket.cpp  test_ssl.cpp  test_timing.cpp  test_uri_parser.cpp
